# blog

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  config.yaml  config.yaml.example  cspell.json  docker-compose.yml  manifest.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  deploy-backend.yml  deploy-binary.yml
content/posts/dev/: hello-rustyblog.md
crates/backend/: Cargo.toml
crates/backend/src/: database.rs  main.rs  templates.rs
crates/backend/src/auth/: guard.rs
crates/backend/src/constants/: like.rs  mod.rs
crates/backend/src/controllers/: app.rs  mod.rs
crates/backend/src/controllers/auth/: status.rs
crates/backend/src/controllers/comments/: create.rs  list.rs
crates/backend/src/controllers/likes/: mod.rs  status.rs  toggle.rs
crates/backend/src/controllers/views/: hit.rs  mod.rs  popular.rs
crates/backend/src/env/: app.rs  state.rs
crates/backend/src/models/: comment.rs  like.rs  mod.rs  user.rs  view.rs
crates/backend/src/utils/: encode.rs  ip.rs  mod.rs  slug.rs
crates/backend/templates/comments/: comment.html  list.html
crates/backend/templates/likes/: button.html
crates/ssg/: Cargo.toml
crates/ssg/src/: cache.rs  category.rs  config.rs  feeds.rs  generator.rs  image.rs  indices.rs  main.rs  metadata.rs  navigation.rs  parallel.rs  parser.rs  reading_time.rs  recent.rs  renderer.rs  robots.rs  search.rs  shortcodes.rs  sitemap.rs  slug.rs  slug_index.rs  syntax_highlighter.rs  types.rs
crates/ssg/tests/: build_test.rs  cli_test.rs  error_test.rs  incremental_test.rs
crates/ssg/tests/common/: fixtures.rs  mod.rs
deploy/systemd/: blog-deploy.service  blog-deploy.timer
docker/backend/: Dockerfile
examples/comments/: README.md  disqus.html  giscus.html  utterances.html
scripts/: assets.js  build-binary.sh  copy-assets.js  deploy-backend.sh  deploy.sh  manifest.js  pull-deploy.sh  update-assets.sh  update-binary.sh
src/: cache.rs  category.rs  config.rs  feeds.rs  generator.rs  image.rs  indices.rs  main.rs  metadata.rs  navigation.rs  parser.rs  plugin.rs  recent.rs  renderer.rs  search.rs  slug.rs  syntax_highlighter.rs  theme.rs  types.rs
src/plugins/: related_posts.rs
static/css/: main.css  theme.css
static/icon/0.1.0/: icons.css
static/scripts/0.1.0/: bundle.js  comment.global.js  index.js
static/scripts/0.1.2/: bundle.js
static/scripts/0.1.3/: Chart-NVUUYOM7.js  Chart-TUM7OLHJ.js  bundle.js  chunk-RLT2P5DH.js  islands.js  like.global.js
static/scripts/0.2.0/: bundle.js
static/scripts/0.3.0/: bundle.js
static/scripts/0.4.0/: bundle.js
static/scripts/0.5.0/: bundle.js
static/scripts/0.5.1/: bundle.js  chunk-WWI6VYDO.js
static/scripts/0.5.2/: bundle.js
static/styles/0.1.0/: theme.css
static/styles/0.1.1/: theme.css
static/styles/0.1.3/: theme.css
static/styles/0.1.4/: theme.css
static/styles/0.1.5/: theme.css
static/styles/0.2.0/: post.css  tags.css
static/styles/0.2.1/: critical.css  post.css
static/styles/0.3.0/: critical.css  list.css  post.css
static/styles/0.4.0/: critical.css  list.css  post.css
static/styles/0.5.0/: critical.css  list.css  tags.css
static/styles/0.5.1/: critical.css  post.css
static/styles/0.6.0/: critical.css
static/styles/0.7.0/: critical.css  list.css  post.css
static/styles/0.8.0/: about.css  critical.css  list.css  post.css
static/styles/0.8.1/: about.css  post.css
static/styles/0.8.2/: post.css
static/styles/0.8.3/: post.css
static/styles/0.8.4/: post.css
templates/: base.html  category.html  index.html  page-about.html  page-post.html  page.html  post.html  tag.html  tags.html
templates/components/: a.html  iframe.html  img.html  post-card.html  prev-next-post.html  profile.html
templates/includes/: about-content.html  category-content.html  comments.html  index-content.html  page-content.html  page-post-content.html  post-content.html  tag-content.html
templates/macros/: cdn-image.html  post-card.html  prev-next-post.html  profile.html  terminal.html  toc.html
templates/partials/: category.html  index.html  page-about.html  page-post.html  page.html  post.html  tag.html  tags.html
themes/default/: base.html  category.html  index.html  post.html  tag.html
themes/default/components/: img.html
themes/default/static/css/: theme.css
