[package]
name = "blog"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast static site generator for marshallku blog"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.9"

# Frontmatter parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templating
tera = "1.20"

# Syntax highlighting
tree-sitter = "0.23"
tree-sitter-highlight = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-json = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.20"
tree-sitter-css = "0.23"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
percent-encoding = "2.3"
regex = "1.11"

# Hashing (for cache)
blake3 = "1.8"

# File watching (for watch mode)
notify = "6.1"

# Image processing (for dimensions)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[dev-dependencies]
tempfile = "3.23"
