[workspace]
resolver = "2"
members = ["crates/ssg", "crates/backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Marshall Ku"]

[workspace.dependencies]
# Shared across multiple crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Backend-specific
axum = "0.7.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
mongodb = "3.2.3"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
bcrypt = "0.17.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.9"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenv = "0.15.0"
futures = "0.3.31"
cookie = "0.18.1"
time = "0.3.41"
log = "0.4.27"
env_logger = "0.11.8"
http-body-util = "0.1.3"
tera = "1.20"
uuid = { version = "1.11", features = ["v4"] }
